# fast-devshell

./: .gitignore  README.md  devshell.toml  fast.py  flake.nix  pyproject.toml
