[tool.poetry]
name = "fast-devshell"
version = "0.1.0"
description = ""
authors = ["Alexander Reinthal <email@reinthal.me>"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
